[package]
name = "rustdb"
version = "0.1.0"
authors = ["David Hedgren <david@hedgren.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
anyhow = "1.0"